--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -69,10 +69,10 @@
                     <ul class="ul-one">
                         <li><i class="fas fa-home side-bar-icon fa-2x"></i><a class="side-links" href=""><span
                                     class="link-text">Home</span></a></li>
-                        <li><i class="fab fa-hotjar side-bar-icon fa-2x"></i><a class="side-links" href=""><span
-                                    class="link-text">Trending Courses</span></a></li>
-                        <li><i class="fas fa-clock side-bar-icon fa-2x"></i><a class="side-links" href=""><span
-                                    class="link-text">Quick Tutorials</span></a></li>
+                        <li><i class="fab fa-hotjar side-bar-icon fa-2x"></i><a class="side-links" href="/courses"><span
+                                    class="link-text">All Courses</span></a></li>
+                        <li><i class="fas fa-clock side-bar-icon fa-2x"></i><a class="side-links" href="/courses/browse" ><span
+                                    class="link-text">Browse Courses</span></a></li>
                     </ul>
                     <hr class="horizontal-rule">
 
