--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -2,64 +2,76 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu+Mono:ital@1&display=swap"
-    rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Dosis&family=Montserrat&family=Raleway&display=swap"
+		rel="stylesheet">
 
-  <link href="/css/playlist.css" rel="stylesheet">
+	<link href="/css/playlist.css" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <div class="h-img"><a href="/"><img src="/images/chinar.jpg"></a></div>
-    <div class="h-heading">
-      <h1>Playlist</h1>
-    </div>
-  </header>
+	<header>
+		<div class="h-img"><a href="/"><img src="/images/chinar.jpg" style="border-radius: 20px;"></a></div>
+		<div class="h-heading" style="margin-top: 10px;">
+			<h1>Playlist</h1>
+		</div>
+	</header>
 
-  <section class="container playlist-section">
-    <div class="playlist-container">
-      <% if(data==null ||data.playIds.length==0){ %>
-      <div id="error">
-        <h3 id="error-p">No Courses Added in Playlist</h3>
-      </div>
-      <% } else {%>
+	<div class="container course-container">
+		<!-- if body -->
+		<% if(data==null ||data.playIds.length==0){ %>
+			<div id="error">
+				<h3 class="name" style="font-size: 1.7rem;">No Courses Added in Playlist</h3>
+			</div>
+		<% } else {%>
 
-      <% for(let i=0;i<data.playIds.length;i++){ %>
-      <div class="playlist-item">
-        <div class="number">
-          <h2 style="color: #ECEFF0;margin-right: 5px;"> &nvrArr;</h2>
-        </div>
-        <div class="thumbnail"><img src="/images/<%= i+1 %>.jpg"></div>
-        <div class="info">
-          <div class="course-name">
-            <h1> <%= name[i] %> </h1>
-          </div>
-          <div class="course-domain">
-            <p>Subject: </p>
-            <h4> <%= subject[i] %> </h4>
-          </div>
-          <div class="btn-container">
-            <a class="btn btn-primary btn-outline-light link" href="/courses/<%= data.playIds[i] %> ">Watch</a>
-            <form method="POST" action="/playlist/<%= data.playIds[i] %>?_method=DELETE"  style="display: inline-block;">
-              <button class="btn btn-primary btn-outline-light link" href="">Remove</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <% } %>
+		<!-- else body -->
+		<% for(let i=0;i<data.playIds.length;i++){ %>
+		<div class="item-wrapper">
+			<div class="number">
+				<h4>Course Number <%= i+1 %> </h4>
+			</div>
+			<div class="subject"><span class="name"><%= subject[i] %> </span></div>
+			<div class="underline"></div>
+			<div class="item-img">
+				<img src="/images/<%= data.playIds[i] %>.jpg" alt="course-logo">
+			</div>
+			<div class="item-details">
+				<div class="course-name">
+					<h5><span class="name">Course:</span> <%= name[i] %></h5>
+				</div>
+				<div class="course-teacher">
+					<h5><span class="name">Teacher :</span><%= teacher[i] %> </h5>
+				</div>
+			</div>
+			<div class="item-button">
+				<a class="btn btn-primary btn-outline-dark " href="/courses/<%= data.playIds[i] %> ">Watch</a>
+				<form method="POST" action="/playlist/<%= data.playIds[i] %>?_method=DELETE"" style=" display:
+					inline-block;">
+					<button class="btn btn-primary btn-outline-dark " href="">Remove</button>
+			</div>
+		</div>
+		<% } %>
+		<% } %>
 
-      <% } %>
-  </section>
+	</div>
 
 
+
+
+
+
+
+
+	</div>
 </body>
 
 </html>
