--- a/views/front-page.ejs
+++ b/views/front-page.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Chinar Academy-Front Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,16 +33,16 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#features">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Testomonials</a>
+                            <a class="nav-link" href="#carousel">Testomonials</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Community</a>
+                            <a class="nav-link" href="https://discord.com/" target="_blanket">Community</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#footer">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -56,7 +56,7 @@
                     </a> -->
                     <a href="/login">
                         <button type="button" class="btn btn-outline-dark btn-sec-one"> <i class="fas fa-user-plus">
-                            </i>    Login</button>
+                            </i> Login</button>
                     </a>
                     <h2 class="quote-h2"><span id="inner-text">Classes to Spark Your Creativity</span></h2>
                     <div class="animated-shadow-quote">
@@ -76,7 +76,7 @@
     </section>
 
     <!--    Here starts the coding for the next section namely features-->
-    <section class="features">
+    <section class="features" id="features">
         <div class="container-fluid">
             <div class="row row-section-two">
                 <div class="col-md-4">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-item ">
+                <div class="carousel-item " id="Testomonials">
                     <div class="carousel-content container-fluid">
                         <img src="Images/img5.png" class="carousel-img">
                         <p class="carousel-text"> Comprehensive, yet still concise. Decent-paced, just for
@@ -148,10 +148,11 @@
             </div>
         </div>
     </section>
-
+    
     <footer id="footer">
         <div class="container-fluid">
-            <i class="social-icon fab fa-2x fa-facebook-f"></i>
+            
+            <i class="social-icon fab fa-2x fa-facebook-f">  </i>
             <i class="social-icon fab fa-2x fa-twitter"></i>
             <i class="social-icon fab  fa-2x fa-instagram instaicon"></i>
             <i class="fas fa-envelope-square fa-2x"></i>
