--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -6,6 +6,7 @@
 
 body {
     position: relative;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -307,7 +308,41 @@ text-align: center;
     color: cornsilk;
 }
 
-.display-false{
- visibility: hidden ;
+.display-false {
+    visibility: hidden;
 }
 
+/* history */
+.history {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.history-heading{
+    text-align: center;
+    margin: 6px;
+    font-size: 1.6rem;
+    margin-top: 0;
+    margin-bottom: 20px;
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.btn-group {
+    padding: 13px;
+    border: 2px solid #ECEFF0;
+    border-radius: 20px;
+}
+
+.history-button{
+    /* margin: 6px; */
+    width: 330px;
+    margin-bottom: 5px;
+    border-radius: 20px;
+    border: 2px solid rgb(60, 60, 60);
+    font-size: 1rem;
+    background-color: #ECEFF0;
+}
