--- a/views/browse.ejs
+++ b/views/browse.ejs
@@ -2,67 +2,70 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Browse Courses</title>
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Dosis&family=Montserrat&family=Raleway&display=swap"
-		rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-	<link href="/css/browse.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/4ed4d66ea3.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Montserrat&family=Raleway&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
+
+  <link href="/css/browse.css" rel="stylesheet">
 </head>
 
-<header >
-  <div class="container" style="padding: 0;margin-bottom: 15px; margin-top: 5px;">
-    <nav class="navbar navbar-expand-lg " style="border-radius: 20px;">
-      <div class="container-fluid">
-        <a class="navbar-brand text-dark  " id="nav-a" href="/"><i class="fa fa-graduation-cap fa-lg mr-2"></i>CHINAR
-          ACADEMY</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-          style="background-color:white;">
-          <span class="navbar-toggler-icon"><i class="fas fa-caret-square-down"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav  ms-auto ">
-            <a class="nav-link active me-3" aria-current="page" href="/"><span class="a-text">Home</span></a>
-            <a class="nav-link me-3" href=""><span class="a-text">Browse</span></a>
-            <a class="nav-link me-3 " href="/profile"><span class="a-text">Profile</span></a>
-            <a class="nav-link me-3 btn btn-outline-dark" href="/logout" tabindex="-1"><span
-                class="a-logout">Logout</span></a>
+<body>
+
+  <header>
+    <div class="container" style="padding: 0;margin-bottom: 15px;">
+      <nav class="navbar navbar-expand-lg " style="border-radius: 20px;">
+        <div class="container-fluid">
+          <a class="navbar-brand text-dark  " id="nav-a" href="/"><i class="fa fa-graduation-cap fa-lg mr-2"></i>CHINAR
+            ACADEMY</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+            style="background-color:white;">
+            <span class="navbar-toggler-icon"><i class="fas fa-caret-square-down"></i></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav  ms-auto ">
+              <a class="nav-link links-nav active me-3" aria-current="page" href="/"><span class="a-text">Home</span></a>
+              <a class="nav-link links-nav me-3" href="/courses/browse"><span class="a-text">Browse</span></a>
+              <a class="nav-link links-nav me-3 " href="/profile"><span class="a-text">Profile</span></a>
+              <a class="nav-link links-nav me-3 btn btn-outline-dark" href="/logout" tabindex="-1"><span
+                  class="a-logout">Logout</span></a>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container category-container
+  <div class=" btn-group" role="group" aria-label="Basic outlined example">
+    <button type="button" class="btn btn-outline-dark btn-category" data-class='Frontend'> Frontend Development</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Algorithim">Algorithim</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Backend"> Backend Development</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Programming"> Programming</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Mobile"> Mobile Development</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Database"> Database Systems</button>
+    <button type="button" class="btn btn-outline-dark btn-category" data-class="Web"> Web Design</button>
   </div>
-</header>
-
-<div class="container category-container
-<div class="btn-group" role="group" aria-label="Basic outlined example">
-  <button type="button" class="btn btn-outline-dark btn-category" data-class='Frontend'> Frontend Development</button>
-  <button type="button" class="btn btn-outline-dark btn-category"  data-class="Algorithim">Algorithim</button>
-  <button type="button" class="btn btn-outline-dark btn-category" data-class="Backend"> Backend Development</button>
-  <button type="button" class="btn btn-outline-dark btn-category" data-class="Programming"> Programming</button>
-  <button type="button" class="btn btn-outline-dark btn-category" data-class="Mobile"> Mobile Development</button>
-  <button type="button" class="btn btn-outline-dark btn-category" data-class="Database"> Database Systems</button>
-  <button type="button" class="btn btn-outline-dark btn-category" data-class="Web"> Web Design</button>
-</div>
 
 
-<div class="container search-conatiner"><span id="search"> Click on a category to see courses</span></div>
-<main>
-  <div class="container course-container">
+  <div class="container search-conatiner"><span id="search"> Click on a category to see courses</span></div>
+  <main>
+    <div class="container course-container">
 
-    <% let i=0 %>
-    <% for(let i=0;i<data.length;i++) {%>
+      <% let i=0 %>
+      <% for(let i=0;i<data.length;i++) {%>
       <div class="course-item hide <%= data[i].domain %>">
-        <div class="card-container">  
+        <div class="card-container">
           <img src="/images/<%= i+1  %>.jpg">
         </div>
         <div class="card-heading">
@@ -77,10 +80,10 @@
           </div>
           <div class="button-div">
             <a href="/courses/<%= i+1 %> " class="btn btn-primary btn-outline-dark">Watch</a>
-            <form class="myForm" id="form-<%= i %>" method="POST" action="/playlist/<%= data[i].c_id %>" >
+            <form class="myForm" id="form-<%= i %>" method="POST" action="/playlist/<%= data[i].c_id %>">
               <button class="btn btn-secondary btn-outline-dark  btn-submit" name="btn">
-                  +Playlist</button>
-          </form>
+                +Playlist</button>
+            </form>
           </div>
         </div>
         <div class="course-description">
@@ -90,14 +93,13 @@
         </div>
       </div>
 
-      <% } %> 
-  </div>
-</main>
+      <% } %>
+    </div>
+  </main>
 
-
-<script src="/js/browse.js"></script>
-<body>
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+  </script>
+  <script src="/js/browse.js""></script>
 </body>
-
 </html>
