--- a/views/main-course.ejs
+++ b/views/main-course.ejs
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav  ms-auto   ">
               <a class="nav-link active me-3" aria-current="page" href="/">Home</a>
-              <a class="nav-link me-3" href="">Browse</a>
+              <a class="nav-link me-3" href="/courses/browse">Browse</a>
               <a class="nav-link me-3" href="/profile">Profile</a>
               <a class="nav-link me-3 btn btn-outline-dark" href="/logout" tabindex="-1">Logout</a>
             </div>
